[build-system]
requires = ["setuptools>=67.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noprint"
version = "1.1.1"
authors = [
  { name="Radoslaw Gryta", email="radek.gryta@gmail.com" },
]
description = "Do not allow prints in your code"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'click >= 5.0',
  'chardet >= 2.2.1'
]

[project.urls]
"Homepage" = "https://github.com/rgryta/NoPrint"
"Bug Tracker" = "https://github.com/rgryta/NoPrint/issues"

[project.scripts]
noprint = "noprint.cli:cli"